--- a/app/src/main/res/layout/activity_tictactoe.xml
+++ b/app/src/main/res/layout/activity_tictactoe.xml
@@ -7,13 +7,71 @@
         android:layout_height="match_parent"
         tools:context=".tictactoe">
 
+    <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            app:srcCompat="@drawable/img_tictactoe"
+            android:id="@+id/activity_main_logo_game"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription"/>
+    <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp" app:srcCompat="@drawable/img_epita"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:id="@+id/activity_main_logo_epita" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="15dp" android:layout_marginBottom="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:ignore="ContentDescription"/>
     <TextView
+            android:text="@string/game_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
+            android:id="@+id/activity_main_title_game"
+            android:textSize="30sp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/activity_main_logo_game"/>
+    <TextView
+            android:text="@string/main_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/activity_main_text_pres" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/activity_main_title_game"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text="@string/Neam_to_fill"
+            android:ems="10"
+            android:id="@+id/editText" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/activity_main_text_pres" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
+            android:importantForAutofill="no" tools:ignore="LabelFor,UnusedAttribute"/>
+    <Button
+            android:text="@string/button_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/main_button_start" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/activity_main_text_made"/>
+    <TextView
+            android:text="@string/text_made"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/activity_main_text_made" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/activity_main_logo_epita"
+            app:layout_constraintEnd_toStartOf="@+id/activity_main_logo_epita" android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"/>
 </android.support.constraint.ConstraintLayout>
